Adds command line options for modules